[package]
name = "txtcrawl"
version = "0.1.0"
edition = "2021"

#[profile.dev]
#opt-level = 3

[lib]
name = "libcrawl"
path = "src/lib/lib.rs"

[[bin]]
name = "txtcrawl"
path = "src/bin/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "*" , features = ["full"]}
reqwest =  {version = "*" , features = ["gzip"]}
futures= "*"
num_cpus = "*"
soup = "*"
chrono = "*"
isahc = "*"
warc = { version="*" , features = ["gzip"] }
#crossbeam = "0.8.2"
async-channel = "1.8.0"
#lingua = {version = "*" , features = ["english","arabic","french"]}
rayon = "1.6.1"
#flate2 = "1.0.25"
libflate = "1"
whatlang = "0.16.2"
#warc = {path = "warc"}