[package]
name = "txtcrawl"
version = "0.1.0"
edition = "2021"

#[profile.dev]
#opt-level = 3

[lib]
name = "libcrawl"
path = "src/lib/lib.rs"

[[bin]]
name = "txtcrawl"
path = "src/bin/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "*" , features = ["full"]}
reqwest =  {version = "*" , features = ["gzip"]}
futures= "*"
soup = "*"
chrono = "*"
isahc = "*"
warc = { version="*" , features = ["gzip"] }
async-channel = "1.8.0"
libflate = "1"
whatlang = "0.16.2"
config = "0.13.3"
url = "2.3.1"
thiserror = "*"
phf = { version = "*", features = ["macros"] }
