[package]
name = "txtcrawl"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
lto = true
strip = true

[lib]
name = "libcrawl"
path = "src/lib/lib.rs"

[[bin]]
name = "txtcrawl"
path = "src/bin/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "*" , features = ["full"]}
reqwest =  {version = "*" , features = ["gzip"]}
futures= "*"
soup = "*"
chrono = "*"
isahc = "*"
warc = { version="*" , features = ["gzip"] }
async-channel = "1.8.0"
libflate = "1"
whatlang = "0.16.2"
config = "0.13.3"
url = "2.3.1"
thiserror = "*"
phf = { version = "*", features = ["macros"] }
chashmap-async = "0.1.0"
texting_robots = "0.2.1"
ahash = {version = "0.8.3" , features = ["std"]}
itertools = "0.10.5"
colored = "2.0.0"